basic functioning app, no tests

--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
-  "name": "pointing-poker",
+  "name": "planning-poker",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "clean": "rm -rf node_modules .next next-env.d.ts",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
+    "firebase": "^10.13.0",
+    "jdenticon": "^3.3.0",
+    "nanoid": "^3.3.7",
+    "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.6"
+    "react-icons": "^5.3.0",
+    "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "14.2.6"
+    "eslint-config-next": "14.2.6",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5"
   }
 }
